fix: try fix material icons on Safari, again

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,10 +40,10 @@ body {
   word-wrap: normal;
   white-space: nowrap;
   direction: ltr;
-  text-rendering: optimizeLegibility;
-  font-feature-settings: 'liga';
-  -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  -moz-osx-font-smoothing: grayscale;
+  font-feature-settings: 'liga';
 }
 
 @media screen and (min-width: 1200px) { /* width > 1200, 部分双栏 */
